# sld_demo

./: .gitignore  CMakeLists.txt  README.md  config.json  config_compressed.json  config_p4_compressed.json  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.idf_5.2.2.esp32s3  sdkconfig.idf_5.4.esp32p4  sdkconfig.idf_5.4.esp32s3  sdkconfig.old
components/config/: mcu_selection.h  module_config.h  module_enable.h
docs/: ide-setup-de.md  ide-setup-en.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/app/: app_camera.c  app_camera.h  app_main.c  app_ui_eve.c  app_ui_lvgl.c  app_ui_slint.cpp  app_webserver.c
main/board/: board.h  board_p4.c  board_s3.c  board_s3_bt817.c  board_test_s3_p4.c
main/resources/: file_resources.c
main/ui/: appwindow.slint  common.slint  logic.slint  page_image.slint  page_info.slint  page_main.slint
main/ui/assets/: dmb_0.rgb  dmb_14.rgb  upload_images.ps1
main/ui_lvgl/assets/: button_landscape.c  esope.c  landscape.c  qr_sld_demo.c  schukat-logo.c
